<?xml version="1.0"?>
<package>
  <name>out2flume</name>
  <version>0.1.0</version>
  <description>Sends /routout_agg to Apache Flume via several ways</description>
  <maintainer email="jjaime@ikergune.com">José Jaime Ariza</maintainer>
  <license>MIT</license>
  <author email="jjaime@ikergune.com">José Jaime Ariza</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosgraph_msgs</run_depend>

</package>
